--- a/src/components/CardPerfil/CardPerfil.module.css
+++ b/src/components/CardPerfil/CardPerfil.module.css
@@ -245,3 +245,22 @@ body {
   width: 200px;
   height: 200px;
 }
+
+.buttonSalvar {
+  background-color: #4CAF50; /* Cor de fundo verde */
+  border: none;
+  color: white;
+  padding: 12px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.buttonSalvar:hover {
+  background-color: #45a049; /* Cor de fundo verde mais escura quando hover */
+}
