--- a/src/components/CardPerfil/CardPerfil.module.css
+++ b/src/components/CardPerfil/CardPerfil.module.css
@@ -15,6 +15,14 @@
   justify-content: space-around
 }
 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+
 .fotoDoUsuario{
   border-radius: 5px;
   height: 100%;
