--- a/src/components/CardPerfil/CardPerfil.module.css
+++ b/src/components/CardPerfil/CardPerfil.module.css
@@ -15,14 +15,6 @@
   justify-content: space-around
 }
 
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 20px;
-}
-
-
 .fotoDoUsuario{
   border-radius: 5px;
   height: 100%;
@@ -254,21 +246,67 @@ body {
   height: 200px;
 }
 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  align-items: baseline;
+  margin-top: 20px;
+  width: 100%;
+  justify-content: space-around;
+}
+
 .buttonSalvar {
-  background-color: #4CAF50; /* Cor de fundo verde */
-  border: none;
-  color: white;
+  width: 45%;
   padding: 12px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s ease;
+  box-sizing: border-box;
+}
+
+.buttonSalvar {
+  background-color: #4CAF50; 
+  color: white;
+  border: none;
 }
 
 .buttonSalvar:hover {
-  background-color: #45a049; /* Cor de fundo verde mais escura quando hover */
+  background-color: #45a049; 
+}
+
+.buttonLogout {
+  background: none;
+  border: 1px solid #333;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: color 0.3s;
+}
+
+.buttonLogout:hover {
+  color: #f01313;
+}
+
+.logout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45%;
+  padding: 12px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+  box-sizing: border-box;
 }
