--- a/src/Pages/RequisicaoDeServico/Requisicaodeservico.module.css
+++ b/src/Pages/RequisicaoDeServico/Requisicaodeservico.module.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: rgb(255, 255, 255);
 }
@@ -77,17 +78,44 @@ body {
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 10px;
+    margin: 13px;
+    flex-wrap: nowrap;
+    max-width: 70%;
+    max-height: 70%;
+    
 }
 
+
 .previewImage {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
+    width: 70%;
+    height: 78%;
     border-radius: 5px;
+    display: flex;
+    flex-wrap: nowrap
 }
 
 .barra {
     max-height: calc(100vh - 100px);
     overflow-y: auto;
     margin-bottom:30%;
+}
+
+
+
+.each-slide-effect {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  height: 350px;
+}
+
+.images {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.images img {
+    width: 100%;
+    height: 500px;
 }
